@@ -7,7 +7,15 @@
 
     public class DynamicClass : IClass
     {
+        private string name;
         private Dictionary<string, object> members = new Dictionary<string, object>();
+
+        public DynamicClass(string name)
+        {
+            this.name = name;
+        }
+
+        public string Name { get { return this.name; } }
 
         public virtual void SetMember(string name, object value)
         {
@@ -34,6 +42,18 @@
                 if (!(member is ICallable))
                     dynobj.SetValue(name, member);
             }
+
+            object constr = this.GetMember(this.name);
+
+            if (constr == null)
+            {
+                if (parameters != null && parameters.Length != 0)
+                    throw new InvalidOperationException(string.Format("No constructor in '{0}' for this arguments", this.name));
+
+                return dynobj;
+            }
+
+            dynobj.Invoke(this.name, parameters);
 
             return dynobj;
         }
