@@ -1,0 +1,10 @@
+﻿
+handle = new System.Threading.AutoResetEvent(false);
+one = 0;
+
+go { one = 1; handle.Set(); }
+
+handle.WaitOne();
+
+result = one;
+
