@@ -48,6 +48,7 @@
             this.Environment.SetValue("Include", new IncludeSubroutine());
             this.Environment.SetValue("Evaluate", new EvaluateFunction());
             this.Environment.SetValue("Execute", new ExecuteSubroutine());
+            this.Environment.SetValue("Channel", typeof(Channel));
         }
     }
 }
